--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "d3-ease": "^0.6.0",
     "firebase": "^8.7.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-firebaseui": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "segment-js": "^1.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
