--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ to = "/index.html"
 status = 200
 
 [[redirects]]
-from = "/quotes.stormconsultancy.co.uk/*"
+from = "/feed/*"
 to = "http://quotes.stormconsultancy.co.uk/:splat"
 status = 200
 force = true
