--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "firebase": "^8.7.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "segment-js": "^1.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
