--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kabisa_coding_assignment",
+  "name": "quoty-quotes-network",
   "version": "0.1.0",
   "private": true,
   "scripts": {
